tls-passthrough/nginxapp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx2
  labels:
    run: my-nginx2
spec:
  ports:
  - port: 443
    protocol: TCP
  selector:
    run: my-nginx2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx2
spec:
  selector:
    matchLabels:
      run: my-nginx2
  replicas: 1
  template:
    metadata:
      labels:
        run: my-nginx2
    spec:
      containers:
      - name: my-nginx2
        image: nginx
        ports:
        - containerPort: 443
        volumeMounts:
        - name: nginx-config2
          mountPath: /etc/nginx
          readOnly: true
        - name: nginx-server-certs2
          mountPath: /etc/nginx-server-certs
          readOnly: true
      volumes:
      - name: nginx-config2
        configMap:
          name: nginx-configmap2
      - name: nginx-server-certs2
        secret:
          secretName: nginx-server-certs2
