tls-passthrough/nginx-virtualservice2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx2
spec:
  hosts:
  - nginx2.example.com
  gateways:
  - mygateway2
  tls:
  - match:
    - port: 443
      sniHosts:
      - nginx2.example.com
    route:
    - destination:
        host: my-nginx2
        port:
          number: 443
      weight: 100
